Fix overflows for wide table and diagrams

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,12 @@ include_in_sitemap: false
 @import '@fontsource-variable/noto-sans';
 @import '@fontsource-variable/roboto-slab';
 
+// Same as img in preflight
+object.plantuml {
+		@apply w-full;
+		@apply h-auto;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
